--- a/.github/workflows/Actions OpenWrt Docker Images.yml
+++ b/.github/workflows/Actions OpenWrt Docker Images.yml
@@ -1,11 +1,3 @@
-#=================================================
-# https://github.com/P3TERX/Actions-OpenWrt
-# Description: Build OpenWrt using GitHub Actions
-# Lisence: MIT
-# Author: P3TERX
-# Blog: https://p3terx.com
-#=================================================
-
 name: Actions OpenWrt Docker Images
 
 env:
@@ -80,19 +72,6 @@ jobs:
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Docker Login
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PWD }}
- 
-      - name: Login To Aliyun
-        uses: docker/login-action@v2
-        with:
-          registry: registry.cn-hangzhou.aliyuncs.com
-          username: ${{ secrets.ALIYUN_USERNAME }}
-          password: ${{ secrets.ALIYUN_PWD }}
-
       - name: Generate Variables
         id: env
         run: |
@@ -133,29 +112,26 @@ jobs:
           cd $GITHUB_WORKSPACE
           rm -rf openwrt-imagebuilder*
 
-      - name: Build & Push Image (amd64)
+      - name: Save Docker Image
         if: env.DOCKER_EXTERA_TAG == 'amd64'
-        uses: docker/build-push-action@v4
-        with:
-          platforms: ${{ env.DOCKER_IMAGE_ARCH }}
-          file: Dockerfile
-          context: .
-          push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/openwrt:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/openwrt:${{ env.DEVICE_PLATFORM }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/openwrt:${{ env.DOCKER_EXTERA_TAG }}
-            registry.cn-hangzhou.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/openwrt:latest
-            registry.cn-hangzhou.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/openwrt:${{ env.DEVICE_PLATFORM }}
-            registry.cn-hangzhou.aliyuncs.com/${{ secrets.ALIYUN_NAMESPACES }}/openwrt:${{ env.DOCKER_EXTERA_TAG }}
-            
-      - name: Save Image
         run: |
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/openwrt:latest
           docker save -o openwrt.tar ${{ secrets.DOCKERHUB_USERNAME }}/openwrt:latest
 
-      # - name: Upload Image
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: openwrt.tar
-      #     path: openwrt.tar 
+      - name: Create GitHub Release
+        id: create_release
+        run: |
+          RELEASE_TAG="v1.0-${{ matrix.TARGETS }}"
+          GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} # Make sure to set this secret in your repository settings
+          RESPONSE=$(curl -s -X POST \
+            -H "Authorization: token $GITHUB_TOKEN" \
+            -d '{"tag_name": "'$RELEASE_TAG'", "name": "'$RELEASE_TAG'", "body": "Docker image for ${{ matrix.TARGETS }}"}' \
+            https://api.github.com/repos/${{ github.repository }}/releases)
+          echo "RELEASE_ID=$(echo $RESPONSE | jq -r .id)" >> $GITHUB_ENV
+
+      - name: Upload Docker Image to Release
+        run: |
+          curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Content-Type: application/octet-stream" \
+            --data-binary @openwrt.tar \
+            https://uploads.github.com/repos/${{ github.repository }}/releases/${{ env.RELEASE_ID }}/assets?name=openwrt.tar
