--- a/.github/workflows/Actions OpenWrt Docker Images.yml
+++ b/.github/workflows/Actions OpenWrt Docker Images.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Find Targets
+            - name: Find Targets
         id: find-targets
         env:
           INPUT_TARGET: ${{ github.event.inputs.INPUT_TARGET }}
@@ -41,10 +41,11 @@ jobs:
             if [ $FIRST -ne 1 ]; then
               JSON="$JSON,"
             fi
-            JSON="$JSON\"${TARGET}\""
+            JSON="$JSON\"$TARGET\""
             FIRST=0
           done
           JSON="$JSON"]}"
+          echo "Generated JSON: $JSON"  # 调试输出
           echo $JSON
           echo "TARGETS=$JSON" >> $GITHUB_OUTPUT
 
