--- a/.github/workflows/Actions OpenWrt Docker Images.yml
+++ b/.github/workflows/Actions OpenWrt Docker Images.yml
@@ -1,4 +1,4 @@
-name: Actions OpenWrt Docker Images
+name: Build OpenWrt Docker Image
 
 env:
   PREFIX_URL: https://downloads.immortalwrt.org/releases/24.10-SNAPSHOT/targets/
@@ -6,65 +6,13 @@ env:
 
 on:
   workflow_dispatch:
-    inputs:
-      INPUT_TARGET:
-        description: "Target to build (platform/target/subtarget)"
-        required: false
-        default: "all"
   schedule:
     - cron: 0 0 * * *
 
 jobs:
-  Config:
-    name: Generate Config
+  Build:
+    name: Build ImmortalWrt Docker Image
     runs-on: ubuntu-latest
-    outputs:
-      TARGETS: ${{ steps.find-targets.outputs.TARGETS }}
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Find Targets
-        id: find-targets
-        env:
-          INPUT_TARGET: ${{ github.event.inputs.INPUT_TARGET }}
-        run: |
-          if [ "$INPUT_TARGET" = "all" ] || [ -z "$INPUT_TARGET" ]; then
-            export TARGETS="$(cat config/platform.config)"
-          else
-            export TARGETS="$INPUT_TARGET"
-          fi
-          
-          # 初始化JSON结构
-          JSON='{"config": ["default"], "targets":['
-          
-          FIRST=1
-          for TARGET in $TARGETS; do
-            if [ $FIRST -ne 1 ]; then
-              JSON="$JSON,"
-            fi
-            # 简化拼接方式
-            JSON="$JSON\"$TARGET\""
-            FIRST=0
-          done
-          
-          # 结束JSON结构
-          JSON="$JSON"]}"
-          
-          # 调试输出，确保JSON格式正确
-          echo "Generated JSON: $JSON"
-          
-          # 输出到GITHUB_OUTPUT
-          echo "TARGETS=$JSON" >> $GITHUB_OUTPUT
-
-  Docker-Images:
-    name: ${{ matrix.TARGETS }}
-    needs: [Config]
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix: ${{fromJson(needs.Config.outputs.TARGETS)}}
 
     steps:
       - name: Checkout
@@ -84,19 +32,11 @@ jobs:
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Generate Variables
-        id: env
+      - name: Set Environment Variables
         run: |
-          export DEVICE_PLATFORM=$(echo ${{ matrix.TARGETS }} | awk -F '/' '{print $1}')
-          echo "DEVICE_PLATFORM=$DEVICE_PLATFORM" >> $GITHUB_ENV
-          export DEVICE_TARGET=$(echo ${{ matrix.TARGETS }} | awk -F '/' '{print $2}')
-          echo "DEVICE_TARGET=$DEVICE_TARGET" >> $GITHUB_ENV
-          export DEVICE_SUBTARGET=$(echo ${{ matrix.TARGETS }} | awk -F '/' '{print $3}')
-          echo "DEVICE_SUBTARGET=$DEVICE_SUBTARGET" >> $GITHUB_ENV
-          export DOCKER_IMAGE_ARCH=$(echo ${{ matrix.TARGETS }} | awk -F '/' '{print $4}' | sed 's/-/\//g')
-          echo "DOCKER_IMAGE_ARCH=$DOCKER_IMAGE_ARCH" >> $GITHUB_ENV
-          export DOCKER_EXTERA_TAG=$(echo ${{ matrix.TARGETS }} | awk -F '/' '{print $5}')
-          echo "DOCKER_EXTERA_TAG=$DOCKER_EXTERA_TAG" >> $GITHUB_ENV
+          echo "DEVICE_PLATFORM=x86" >> $GITHUB_ENV
+          echo "DEVICE_TARGET=x86" >> $GITHUB_ENV
+          echo "DEVICE_SUBTARGET=64" >> $GITHUB_ENV
 
       - name: Download Image Builder
         run: |
@@ -109,49 +49,35 @@ jobs:
           cp -rf $GITHUB_WORKSPACE/files .
           chmod +x files/etc/rc.local
 
-      - name: Build RootFS (amd64)
-        if: env.DOCKER_EXTERA_TAG == 'amd64'
+      - name: Build RootFS
         run: |
           cd immortalwrt-imagebuilder-$DEVICE_VERSION-$DEVICE_TARGET-$DEVICE_SUBTARGET.Linux-x86_64
           chmod +x $GITHUB_WORKSPACE/scripts/*
           $GITHUB_WORKSPACE/scripts/preset-terminal-tools.sh
           export CONFIG_PACKAGES=$(cat $GITHUB_WORKSPACE/config/packages.config | tr -s "\n" " ")
           make image PACKAGES="$CONFIG_PACKAGES" FILES="files"
-          cp -rf bin/targets/$DEVICE_TARGET/$DEVICE_SUBTARGET/*rootfs.tar.gz $GITHUB_WORKSPACE
-                  
-      - name: Delete Image Builder
-        run: |
-          cd $GITHUB_WORKSPACE
-          rm -rf openwrt-imagebuilder*
-
+          cp -rf bin/targets/$DEVICE_TARGET/$DEVICE_SUBTARGET/*rootfs.tar.gz $GITHUB_WORKSPACE/immortalwrt-rootfs.tar.gz
+          
       - name: Build Docker Image
-        if: env.DOCKER_EXTERA_TAG == 'amd64'
         run: |
-          # Ensure that DEVICE_PLATFORM is populated correctly
-          echo "DEVICE_PLATFORM: ${{ matrix.DEVICE_PLATFORM }}"
-          docker build -t openwrt:${{ matrix.DEVICE_PLATFORM }} .
-        
-      - name: Save Docker Image
-        if: env.DOCKER_EXTERA_TAG == 'amd64'
-        run: |
-          # Check DEVICE_PLATFORM variable here as well
-          echo "DEVICE_PLATFORM: ${{ matrix.DEVICE_PLATFORM }}"
-          docker save -o openwrt-${{ matrix.DEVICE_PLATFORM }}.tar openwrt:${{ matrix.DEVICE_PLATFORM }}
+          docker build -t immortalwrt:latest -f Dockerfile .
+          docker save -o immortalwrt-docker-image.tar immortalwrt:latest
+          gzip immortalwrt-docker-image.tar
 
-      - name: Create GitHub Release
+      - name: Get Date
+        id: date
+        run: echo "DATE=$(date +%Y%m%d)" >> $GITHUB_OUTPUT
+
+      - name: Create Release
         id: create_release
-        run: |
-          RELEASE_TAG="v1.0-${{ matrix.DEVICE_PLATFORM }}"
-          GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} # Make sure to set this secret in your repository settings
-          RESPONSE=$(curl -s -X POST \
-            -H "Authorization: token $GITHUB_TOKEN" \
-            -d '{"tag_name": "'$RELEASE_TAG'", "name": "'$RELEASE_TAG'", "body": "Docker image for ${{ matrix.DEVICE_PLATFORM }}"}' \
-            https://api.github.com/repos/${{ github.repository }}/releases)
-          echo "RELEASE_ID=$(echo $RESPONSE | jq -r .id)" >> $GITHUB_ENV
-
-      - name: Upload Docker Image to Release
-        run: |
-          curl -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Content-Type: application/octet-stream" \
-            --data-binary @openwrt-${{ matrix.DEVICE_PLATFORM }}.tar \
-            https://uploads.github.com/repos/${{ github.repository }}/releases/${{ env.RELEASE_ID }}/assets?name=openwrt-${{ matrix.DEVICE_PLATFORM }}.tar
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: immortalwrt-${{ steps.date.outputs.DATE }}
+          name: ImmortalWrt Docker Image ${{ steps.date.outputs.DATE }}
+          draft: false
+          prerelease: false
+          files: |
+            immortalwrt-docker-image.tar.gz
+            immortalwrt-rootfs.tar.gz
