--- a/config/packages.config
+++ b/config/packages.config
@@ -1,10 +1,13 @@
 -bash
 curl
-htop
+htop 
 nano
 vim-full
 luci-i18n-base-zh-cn
+luci-i18n-package-manager-zh-cn
 luci-app-firewall
 luci-i18n-firewall-zh-cn
 luci-theme-argon
+luci-app-argon-config
+luci-i18n-argon-config-zh-cn
 luci-app-openclash
