Update ImmotralWrt-Docker combined by Actions.yml

--- a/.github/workflows/ImmotralWrt-Docker combined by Actions.yml
+++ b/.github/workflows/ImmotralWrt-Docker combined by Actions.yml
@@ -1,4 +1,4 @@
-name: Build OpenWrt Docker Image
+name: Build ImmotralWrtWrt Docker Image
 
 env:
   PREFIX_URL: https://downloads.immortalwrt.org/releases/24.10-SNAPSHOT/targets/
