Update ImmotralWrt-Docker combined by Actions.yml

--- a/.github/workflows/ImmotralWrt-Docker combined by Actions.yml
+++ b/.github/workflows/ImmotralWrt-Docker combined by Actions.yml
@@ -114,3 +114,4 @@ jobs:
           prerelease: false
           files: |
             immortalwrt-docker-image.tar.gz
+            immortalwrt-rootfs.tar.gz
