--- a/.github/workflows/ImmotralWrt-Docker combined by Actions.yml
+++ b/.github/workflows/ImmotralWrt-Docker combined by Actions.yml
@@ -82,13 +82,13 @@ jobs:
           
       - name: Build Docker Image
         run: |
-          docker build -t immortalwrt:${{ steps.datetime.outputs.DATE_TIME }} -f Dockerfile .
-          docker save -o immortalwrt-docker-image-${{ steps.datetime.outputs.DATE_TIME }}.tar immortalwrt:${{ steps.datetime.outputs.DATE_TIME }}
-          gzip immortalwrt-docker-image-${{ steps.datetime.outputs.DATE_TIME }}.tar
+          docker build -t immortalwrt:${{ env.DATE_TIME }} -f Dockerfile .
+          docker save -o immortalwrt-docker-image-${{ env.DATE_TIME }}.tar immortalwrt:${{ env.DATE_TIME }}
+          gzip immortalwrt-docker-image-${{ env.DATE_TIME }}.tar
 
       - name: Get Date
         id: datetime
-        run: echo "DATE_TIME=$(date +%Y%m%d-%H%M%S)" >> $GITHUB_OUTPUT
+        run: echo "DATE_TIME=$(date +%Y%m%d-%H%M%S)" >> $GITHUB_ENV
 
       - name: Create Release
         id: create_release
