--- a/.github/workflows/ImmotralWrt-Docker combined by Actions.yml
+++ b/.github/workflows/ImmotralWrt-Docker combined by Actions.yml
@@ -71,6 +71,10 @@ jobs:
           
           chmod +x files/etc/rc.local
 
+      - name: Get Date and Time
+        id: datetime
+        run: echo "DATE_TIME=$(date +%Y%m%d-%H%M%S)" >> $GITHUB_ENV
+
       - name: Build RootFS
         run: |
           cd immortalwrt-imagebuilder-$DEVICE_VERSION-$DEVICE_TARGET-$DEVICE_SUBTARGET.Linux-x86_64
@@ -78,11 +82,9 @@ jobs:
           $GITHUB_WORKSPACE/scripts/preset-terminal-tools.sh
           export CONFIG_PACKAGES=$(cat $GITHUB_WORKSPACE/config/packages.config | tr -s "\n" " ")
           make image PACKAGES="$CONFIG_PACKAGES" FILES="files"
-          cp -rf bin/targets/$DEVICE_TARGET/$DEVICE_SUBTARGET/*rootfs.tar.gz $GITHUB_WORKSPACE/immortalwrt-rootfs.tar.gz
+          cp -rf bin/targets/$DEVICE_TARGET/$DEVICE_SUBTARGET/*rootfs.tar.gz $GITHUB_WORKSPACE/immortalwrt-rootfs-${{ env.DATE_TIME }}.tar.gz
 
-      - name: Get Date and Time
-        id: datetime
-        run: echo "DATE_TIME=$(date +%Y%m%d-%H%M%S)" >> $GITHUB_ENV
+      
          
       - name: Build Docker Image
         run: |
@@ -102,4 +104,4 @@ jobs:
           prerelease: false
           files: |
             immortalwrt-docker-image-${{ env.DATE_TIME }}.tar.gz
-            immortalwrt-rootfs.tar.gz
+            immortalwrt-rootfs.tar-${{ env.DATE_TIME }}.gz
