--- a/.github/workflows/ImmotralWrt-Docker combined by Actions.yml
+++ b/.github/workflows/ImmotralWrt-Docker combined by Actions.yml
@@ -83,7 +83,30 @@ jobs:
           export CONFIG_PACKAGES=$(cat $GITHUB_WORKSPACE/config/packages.config | tr -s "\n" " ")
           make image PACKAGES="$CONFIG_PACKAGES" FILES="files"
           cp -rf bin/targets/$DEVICE_TARGET/$DEVICE_SUBTARGET/*rootfs.tar.gz $GITHUB_WORKSPACE/immortalwrt-rootfs-${{ env.DATE_TIME }}.tar.gz
-         
+
+      - name: Prepare Docker Build Files
+        run: |
+          # 确保脚本有执行权限
+          chmod +x $GITHUB_WORKSPACE/openwrt-init.sh
+          chmod +x $GITHUB_WORKSPACE/entrypoint.sh
+          
+          # 创建Dockerfile的构建上下文
+          mkdir -p docker-build
+          cp $GITHUB_WORKSPACE/immortalwrt-rootfs-${{ env.DATE_TIME }}.tar.gz docker-build/
+          cp $GITHUB_WORKSPACE/custom-scripts/Immortalwrt-init.sh docker-build/
+          cp $GITHUB_WORKSPACE/custom-scripts/entrypoint.sh docker-build/
+          cp $GITHUB_WORKSPACE/Dockerfile docker-build/
+          
+          # 进入构建目录
+          cd docker-build
+          
+          # 设置默认环境变量值
+          # 这些值将在Dockerfile中作为默认值使用，用户可以在运行容器时覆盖它们
+          echo "设置Docker构建的默认环境变量..."
+          sed -i "s|ENV LAN_IPADDR=.*|ENV LAN_IPADDR=\"${{ github.event.inputs.IP_ADDRESS }}\" \\\\|" Dockerfile
+          sed -i "s|ENV LAN_GATEWAY=.*|ENV LAN_GATEWAY=\"${{ github.event.inputs.GATEWAY }}\" \\\\|" Dockerfile
+          sed -i "s|ENV LAN_DNS=.*|ENV LAN_DNS=\"${{ github.event.inputs.DNS_SERVER }}\" \\\\|" Dockerfile
+          
       - name: Build Docker Image
         run: |
           docker build -t immortalwrt:${{ env.DATE_TIME }} -f Dockerfile .
