--- a/.github/workflows/ImmotralWrt-Docker combined by Actions.yml
+++ b/.github/workflows/ImmotralWrt-Docker combined by Actions.yml
@@ -95,12 +95,17 @@ jobs:
           cp $GITHUB_WORKSPACE/custom-scripts/Immortalwrt.sh docker-build/
           cp $GITHUB_WORKSPACE/Dockerfile docker-build/
           
+          # 进入构建目录
+          cd docker-build
+          
       - name: Build Docker Image
         run: |
-          docker build -t immortalwrt:${{ env.DATE_TIME }} -f Dockerfile .
-          docker save -o immortalwrt-docker-image-${{ env.DATE_TIME }}.tar immortalwrt:${{ env.DATE_TIME }}
+          cd docker-build
+          docker build -t immortalwrt:${{ env.DATE_TIME }} .
+          docker save -o ../immortalwrt-docker-image-${{ env.DATE_TIME }}.tar immortalwrt:${{ env.DATE_TIME }}
+          cd ..
           gzip immortalwrt-docker-image-${{ env.DATE_TIME }}.tar
-      
+          
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
