--- a/config/packages.config
+++ b/config/packages.config
@@ -12,3 +12,5 @@ luci-theme-argon
 luci-app-argon-config
 luci-i18n-argon-config-zh-cn
 openssh-sftp-server
+luci-app-openclash
+luci-proto-wireguard
